Add link to info sections img

--- a/index.html
+++ b/index.html
@@ -288,8 +288,10 @@
                                 <p class="right-info-time">Sputnik Узбекистан 14:32</p>
                             </div>
                         </div>
-                        <img class="right-info-img" src="img/info-big-img.jpg" height="338" alt=""
-                            srcset="img/info-big-img.jpg 1x, img/info-big-img@2x.jpg 2x">
+                        <a href="about.html">
+                            <img class="right-info-img" src="img/info-big-img.jpg" height="338" alt=""
+                             srcset="img/info-big-img.jpg 1x, img/info-big-img@2x.jpg 2x">
+                        </a>
                     </div>
                 </div>
             </section>
