--- a/news-list.html
+++ b/news-list.html
@@ -250,8 +250,10 @@
                             </div>
                         </div>
 
-                        <img class="right-info-img" src="img/news-list-side-img.jpg" height="553" alt=""
+                        <a href="about.html">
+                            <img class="right-info-img" src="img/news-list-side-img.jpg" height="553" alt=""
                             srcset="img/news-list-side-img.jpg 1x, img/news-list-side-img@2x.jpg 2x">
+                        </a>
 
                     </div>
                 </div>
