Remove link from abouts title

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                                 <img src="./img/list-logo-8.jpg" width="30" height="30" alt="" srcset="./img/list-logo-8.jpg 1x, ./img/list-logo-8@2x.jpg 2x">
                                 FBM.ru 22:23
                             </div>
-                            <h1 class="about-content-title"> <a href="news-list.html">Илон Маск принял участие во Всемирной сетевой конференции в Китае</a></h1>
+                            <h1 class="about-content-title">Илон Маск принял участие во Всемирной сетевой конференции в Китае</h1>
                             <div class="about-content-img">
                                 <img src="./img/about-hero-img.jpg" width="797" height="300" alt="Big car's image" srcset="./img/about-hero-img.jpg 1x, ./img/about-hero-img@2x.jpg 2x">
                             </div>
