--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
             <!-- main shop img -->
 
             <div class="shop-img">
-                <img src="img/shop-img.jpg" width="1200" height="128" alt="shop img"
+                <a href="news-list.html">
+                    <img src="img/shop-img.jpg" width="1200" height="128" alt="shop img"
                     srcset="img/shop-img.jpg 1x, img/shop-img@2x.jpg 2x">
+                </a>
             </div>
 
             <!-- main card section -->
