--- a/news-list.html
+++ b/news-list.html
@@ -79,8 +79,10 @@
             <!-- main shop img -->
 
             <div class="shop-img">
-                <img src="img/news-hero-img.jpg" width="1200" height="128" alt="shop img"
+                <a href="index.html">
+                    <img src="img/news-hero-img.jpg" width="1200" height="128" alt="shop img"
                     srcset="img/news-hero-img.jpg 1x, img/news-hero-img@2x.jpg 2x">
+                </a>
             </div>
 
             <!-- main info section -->
