Add lang toggle func

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                         class="header-search-input">
                 </div>
                 <div class="header-lang">
-                    <a href="#" class="lang active">УЗ</a>
-                    <a href="#" class="lang">РУ</a>
+                    <a href="#" class="lang js-lang-toggle active">УЗ</a>
+                    <a href="#" class="lang js-lang-toggle">РУ</a>
                 </div>
                 <button class="header-btn">Войти</button>
 
