--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
                         <input type="text" list="list-data" placeholder="Поиск" aria-label="Поиск" class="header-search-input">
                     </div>
                     <div class="header-lang">
-                        <a href="#" class="lang active">УЗ</a>
-                        <a href="#" class="lang">РУ</a>
+                        <a href="#" class="lang js-lang-toggle active">УЗ</a>
+                        <a href="#" class="lang js-lang-toggle">РУ</a>
                     </div>
                     <button class="header-btn">Войти</button>
 
