--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,8 @@
                     <input type="text" list="list-data" placeholder="Поиск" aria-label="Поиск" class="header-search-input">
                 </div>
                 <div class="header-lang">
-                    <a href="#" class="lang active">УЗ</a>
-                    <a href="#" class="lang">РУ</a>
+                    <a href="#" class="lang js-lang-toggle active">УЗ</a>
+                    <a href="#" class="lang js-lang-toggle">РУ</a>
                 </div>
                 <button class="header-btn">Войти</button>
 
@@ -79,7 +79,7 @@
                      <div class="contact-block">
                          <input class="form-input-50" type="text" name="name" placeholder="Имя" required>
                          <input class="form-input-50" type="tel" name="phone" placeholder="Номер телефона" required>
-                     </div>   
+                     </div>
                      <input class="form-input-email" type="email" name="email" placeholder="Электронная почта" required>
                      <textarea class="form-input-text" name="text" placeholder="Текст" required></textarea>
                      <button class="send-btn" type="submit">Отправить</button>
