--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <header>
         <div class="site-header">
             <div class="container header-container">
-                <a class="header-logo-link" href="#"><img class="header-logo-img" src="img/site-logo.svg" width="264"
-                        height="28" alt="Site-logo"></a>
+                <a class="header-logo-link" href="#">N24</a>
                 <div class="header-currency">
                     <div><a class="currency-usd" href="#"><span class="currency-symbol">$</span>10137.2</a></div>
                     <div><a class="currency-rub" href="#"><span class="currency-symbol">P</span>138.26</a></div>
